k8s_deployer/config_templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      name: http-grafana
  selector:
    app: grafana
