k8s_deployer/config_templates/jupyter-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-headless
  labels:
    name: jupyterlab
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    name: jupyterlab
