k8s_deployer/config_templates/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  labels:
    name: jupyterlab
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    name: jupyterlab
