k8s_deployer/config_templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: yt-demo
  namespace: default
  annotations:
     gateway.alb.yc.io/security-groups: enp943bhggcf47u0i55g
spec:
  gatewayClassName: yc-df-class
  listeners:
    - name: ytsaurus
      hostname: "*.demo.ytsaurus.tech"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: alb-cert-wildcard
            namespace: default
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              yt-demo: "true"
